feat: Replace transmission-exporter with custom Python metrics server - Replace problematic transmission-exporter with reliable custom Python solution - Add built-in custom metrics server with proper session handling - Update environment variables: METRICS_ENABLED, METRICS_PORT, METRICS_INTERVAL - Remove transmission-exporter build stage and dependencies - Add Python 3 and py3-requests to container - Create new s6 service for custom metrics - Update documentation and configuration files - Add health endpoint at /health - Improve startup reliability with Transmission readiness checks - Maintain backward compatibility with existing metric names

--- a/.env.sample
+++ b/.env.sample
@@ -67,18 +67,21 @@ TZ=UTC
 # MONITORING & METRICS (Optional)
 # =============================================================================
 
-# Built-in Prometheus Exporter (Recommended for external monitoring)
-# Enable built-in Prometheus exporter for metrics collection
-# Set to 'true' to enable the exporter service within the container
-TRANSMISSION_EXPORTER_ENABLED=false
+# Built-in Custom Metrics Server (Recommended for external monitoring)
+# Enable built-in custom metrics server for Prometheus metrics collection
+# Set to 'true' to enable the metrics service within the container
+METRICS_ENABLED=false
 
 # Port for the Prometheus metrics endpoint
 # Metrics will be available at http://localhost:9099/metrics
-TRANSMISSION_EXPORTER_PORT=9099
+METRICS_PORT=9099
+
+# Metrics update interval in seconds
+METRICS_INTERVAL=30
 
 # Internal Health Metrics (Advanced debugging and system monitoring)
 # Enable internal metrics collection (stored in /tmp/metrics.txt)
-# METRICS_ENABLED=false
+# INTERNAL_METRICS_ENABLED=false
 
 # Enable DNS leak detection in health checks
 # CHECK_DNS_LEAK=false
@@ -113,7 +116,7 @@ LOG_TO_STDOUT=false
 # FILE__VPN_PASS=/run/secrets/vpn_password
 
 # Monitoring and health checks
-# METRICS_ENABLED=false
+# INTERNAL_METRICS_ENABLED=false
 # CHECK_DNS_LEAK=false
 # CHECK_IP_LEAK=false
 # HEALTH_CHECK_HOST=google.com
