docs: Clean up repository and update all references to new metrics system - Remove duplicate and redundant files (dockerfile-integration-example.md, metrics-server.py) - Update all remaining TRANSMISSION_EXPORTER references to METRICS_ENABLED - Improve sample configuration files with nzbget-style organization - Add comprehensive Rocky server upgrade guide - Update monitoring documentation for v4.0.6-r11 - Enhance sample wrapper script with proper logging and error handling - Fix variable naming inconsistencies throughout documentation

--- a/scripts/sample-transmission.env
+++ b/scripts/sample-transmission.env
@@ -1,44 +1,66 @@
-# Sample Transmission Environment File
-# Copy this to /opt/containerd/env/transmission.env and customize
+# =====================================================
+# TRANSMISSION VPN CONFIGURATION
+# =====================================================
+# Copy this file to /opt/containerd/env/transmission.env and customize
 
-# Container Configuration
-CONTAINER_NAME=transmissionvpn
-IMAGE_NAME=magicalyak/transmissionvpn:latest
+# ---- Container Image ----
+TRANSMISSION_IMAGE=magicalyak/transmissionvpn:latest
 
-# Network Configuration
-HOST_PORT_WEB=9091
-HOST_PORT_METRICS=9099
-HOST_PORT_PEER=51413
+# ---- VPN Configuration ----
+# VPN type: 'openvpn' or 'wireguard'
+VPN_CLIENT=openvpn
 
-# Transmission Configuration
-TRANSMISSION_WEB_UI=flood
-TRANSMISSION_DOWNLOAD_DIR=/downloads
-TRANSMISSION_INCOMPLETE_DIR=/downloads/incomplete
-TRANSMISSION_WATCH_DIR=/downloads/watch
+# Path to your VPN config file (inside the container)
+VPN_CONFIG=/config/openvpn/your-provider.ovpn
 
-# VPN Configuration
-VPN_PROVIDER=PRIVADOVPN
-VPN_CONFIG=atl-009.ovpn
-VPN_USERNAME=your_vpn_username
-VPN_PASSWORD=your_vpn_password
+# VPN Credentials (SECURITY: Consider using credentials file instead)
+VPN_USER=your_vpn_username
+VPN_PASS=your_vpn_password
 
-# Health Check Configuration (new in v4.0.6-r10)
-VPN_HEALTH_REQUIRED=true
-VPN_GRACE_PERIOD=300
-HEALTH_CHECK_HOST=google.com
+# Alternative: Use credentials file (more secure)
+# VPN_CREDENTIALS_FILE=/config/openvpn/credentials.txt
 
-# Optional: Transmission Credentials
-TRANSMISSION_RPC_USERNAME=admin
-TRANSMISSION_RPC_PASSWORD=your_transmission_password
-
-# Optional: Timezone
+# ---- System Settings ----
+PUID=911
+PGID=911
 TZ=America/New_York
 
-# Optional: User/Group IDs
-PUID=1000
-PGID=1000
+# ---- Network Configuration ----
+# Your local network in CIDR notation (allows local access bypassing VPN)
+LOCAL_NETWORK=10.1.0.0/16
 
-# Volume Mounts
-DOWNLOADS_PATH=/opt/transmission/downloads
-CONFIG_PATH=/opt/transmission/config
-WATCH_PATH=/opt/transmission/watch 
+# ---- Transmission Settings ----
+TRANSMISSION_RPC_USERNAME=admin
+TRANSMISSION_RPC_PASSWORD=your_secure_password_hash
+TRANSMISSION_WEB_AUTO=flood
+TRANSMISSION_DOWNLOAD_DIR=/downloads/completed
+TRANSMISSION_INCOMPLETE_DIR=/downloads/incomplete
+TRANSMISSION_WATCH_DIR=/watch
+
+# ---- Custom Metrics Server (v4.0.6-r11+) ----
+METRICS_ENABLED=true
+METRICS_PORT=9099
+METRICS_INTERVAL=30
+
+# ---- Health Check Settings ----
+CHECK_DNS_LEAK=true
+CHECK_IP_LEAK=true
+HEALTH_CHECK_HOST=8.8.8.8
+
+# ---- Optional Features ----
+# HTTP Proxy (routes through VPN)
+ENABLE_PRIVOXY=true
+PRIVOXY_PORT=8119
+
+# Debug logging
+DEBUG=false
+
+# =====================================================
+# DEPRECATED VARIABLES (Remove these)
+# =====================================================
+# TRANSMISSION_EXPORTER_ENABLED=true     # Use METRICS_ENABLED instead
+# TRANSMISSION_EXPORTER_PORT=9099        # Use METRICS_PORT instead
+# EXPORTER_ENABLED=true                  # Use METRICS_ENABLED instead
+# EXPORTER_PORT=9099                     # Use METRICS_PORT instead
+# CHECK_DNS_LEAKS=true                   # Use CHECK_DNS_LEAK instead (no S)
+# CHECK_IP_LEAKS=true                    # Use CHECK_IP_LEAK instead (no S) 
