--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,25 +1,49 @@
 ---
-name-template: "v$RESOLVED_VERSION"
-tag-template: "v$RESOLVED_VERSION"
+name-template: 'v$NEXT_PATCH_VERSION'
+tag-template: 'v$NEXT_PATCH_VERSION'
 categories:
-  - title: "🚀 Features"
+  - title: '🚀 Features'
     labels:
-      - "feature"
-      - "enhancement"
-  - title: "🐛 Bug Fixes"
+      - 'feature'
+      - 'feat'
+      - 'enhancement'
+  - title: '🐛 Bug Fixes'
     labels:
-      - "fix"
-      - "bug"
-  - title: "🧰 Maintenance"
+      - 'bug'
+      - 'fix'
+      - 'bugfix'
+  - title: '📊 Monitoring & Metrics'
     labels:
-      - "maintenance"
-      - "chore"
-      - "dependencies"
-      - "ci"
-change-template: "- $TITLE @$AUTHOR (#$NUMBER)"
+      - 'monitoring'
+      - 'metrics'
+      - 'prometheus'
+      - 'grafana'
+  - title: '🔒 Security'
+    labels:
+      - 'security'
+      - 'vulnerability'
+  - title: '🧰 Maintenance'
+    labels:
+      - 'chore'
+      - 'maintenance'
+      - 'docs'
+      - 'ci'
+      - 'build'
+      - 'dependencies'
+change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 template: |
   ## Changes
 
   $CHANGES
 
-  **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...v$RESOLVED_VERSION 
+  ## 🐳 Docker Images
+  
+  - **Docker Hub**: `magicalyak/transmissionvpn:$NEXT_PATCH_VERSION`
+  - **GitHub Container Registry**: `ghcr.io/magicalyak/transmissionvpn:$NEXT_PATCH_VERSION`
+  - **Multi-Architecture**: `linux/amd64`, `linux/arm64`
+
+  ## 📊 Monitoring
+  
+  This release includes enhanced monitoring capabilities with Prometheus metrics and Grafana dashboards.
+
+  **Full Changelog**: https://github.com/${{ github.repository }}/compare/$PREVIOUS_TAG...v$NEXT_PATCH_VERSION 
