--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -98,9 +98,14 @@ jobs:
             ${{ env.REGISTRY_DOCKERHUB }}/${{ env.IMAGE_NAME }}
             ${{ env.REGISTRY_GHCR }}/${{ env.IMAGE_NAME }}
           tags: |
-            # Version tags for releases
-            type=match,pattern=v(.*),group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Full version tag (4.0.6-r21)
             type=match,pattern=v(\d+\.\d+\.\d+-r\d+),group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Extract base version without patch (4.0.6) from v4.0.6-rXX tags
+            type=match,pattern=v(\d+\.\d+\.\d+)-r\d+,group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Extract minor version (4.0) from v4.0.6-rXX tags
+            type=match,pattern=v(\d+\.\d+)\.\d+-r\d+,group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Extract major version (4) from v4.0.6-rXX tags
+            type=match,pattern=v(\d+)\.\d+\.\d+-r\d+,group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
             # Latest tag only for version tag releases
             type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
             # Stable tag for version tags
@@ -260,9 +265,14 @@ jobs:
             ${{ env.REGISTRY_DOCKERHUB }}/${{ env.IMAGE_NAME }}
             ${{ env.REGISTRY_GHCR }}/${{ env.IMAGE_NAME }}
           tags: |
-            # Version tags for releases
-            type=match,pattern=v(.*),group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Full version tag (4.0.6-r21)
             type=match,pattern=v(\d+\.\d+\.\d+-r\d+),group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Extract base version without patch (4.0.6) from v4.0.6-rXX tags
+            type=match,pattern=v(\d+\.\d+\.\d+)-r\d+,group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Extract minor version (4.0) from v4.0.6-rXX tags
+            type=match,pattern=v(\d+\.\d+)\.\d+-r\d+,group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Extract major version (4) from v4.0.6-rXX tags
+            type=match,pattern=v(\d+)\.\d+\.\d+-r\d+,group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
             # Latest tag only for version tag releases
             type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
             # Stable tag for version tags
@@ -429,9 +439,14 @@ jobs:
             ${{ env.REGISTRY_DOCKERHUB }}/${{ env.IMAGE_NAME }}
             ${{ env.REGISTRY_GHCR }}/${{ env.IMAGE_NAME }}
           tags: |
-            # Version tags for releases
-            type=match,pattern=v(.*),group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Full version tag (4.0.6-r21)
             type=match,pattern=v(\d+\.\d+\.\d+-r\d+),group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Extract base version without patch (4.0.6) from v4.0.6-rXX tags
+            type=match,pattern=v(\d+\.\d+\.\d+)-r\d+,group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Extract minor version (4.0) from v4.0.6-rXX tags
+            type=match,pattern=v(\d+\.\d+)\.\d+-r\d+,group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Extract major version (4) from v4.0.6-rXX tags
+            type=match,pattern=v(\d+)\.\d+\.\d+-r\d+,group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
             # Latest tag only for version tag releases
             type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
             # Stable tag for version tags
@@ -501,9 +516,14 @@ jobs:
             ${{ env.REGISTRY_DOCKERHUB }}/${{ env.IMAGE_NAME }}
             ${{ env.REGISTRY_GHCR }}/${{ env.IMAGE_NAME }}
           tags: |
-            # Version tags for releases
-            type=match,pattern=v(.*),group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Full version tag (4.0.6-r21)
             type=match,pattern=v(\d+\.\d+\.\d+-r\d+),group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Extract base version without patch (4.0.6) from v4.0.6-rXX tags
+            type=match,pattern=v(\d+\.\d+\.\d+)-r\d+,group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Extract minor version (4.0) from v4.0.6-rXX tags
+            type=match,pattern=v(\d+\.\d+)\.\d+-r\d+,group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            # Extract major version (4) from v4.0.6-rXX tags
+            type=match,pattern=v(\d+)\.\d+\.\d+-r\d+,group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
             # Latest tag only for version tag releases
             type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
             # Stable tag for version tags
